# probabilistic-systems-engineering

./: .gitignore  README.md  llms.txt
tools/artifact-projection/: README.md  artifact-projection.json  pyproject.toml
tools/artifact-projection/docker/: .dockerignore  Dockerfile
tools/artifact-projection/fixtures/fx21_1_min_success/: expect.json
tools/artifact-projection/fixtures/fx21_2_non_recursive/: expect.json
tools/artifact-projection/fixtures/fx21_2_non_recursive/repo/: config.json
tools/artifact-projection/fixtures/fx21_3_multi_root_ambiguity/: expect.json
tools/artifact-projection/fixtures/fx21_3_multi_root_ambiguity/repo/: config.json
tools/artifact-projection/fixtures/fx21_4_dts_collision_casefold/: expect.json
tools/artifact-projection/fixtures/fx21_5_dts_vs_unmanaged_dir/: expect.json
tools/artifact-projection/fixtures/fx21_5_dts_vs_unmanaged_dir/repo/: config.json
tools/artifact-projection/fixtures/fx21_6_lrs_deletion_gate/: expect.json
tools/artifact-projection/fixtures/fx21_7_lrs_deletion_enabled/: expect.json
tools/artifact-projection/fixtures/fx21_8_regen_engine_id/: expect.json
tools/artifact-projection/fixtures/fx21_9_table_degraded_marker/: expect.json
tools/artifact-projection/src/artifact_projection/: classify.py  cli.py  collisions.py  config.py  converge.py  discovery.py  errors.py  fixture_harness.py  fixtures_cli.py  mapping.py  meta.py  staging.py  util.py
tools/artifact-projection/src/artifact_projection.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tools/artifact-projection/tests/: test_root_constraints.py
(+100 files in other folders)
