[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "artifact-projection"
version = "2.4.2"
description = "Artifact Projection Tool (Convergence Contract v2.2)"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
