[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "artifact-projection"
version = "2.4.11"
description = "Artifact Projection Tool (Convergence Contract v2.3.1)"
requires-python = ">=3.11"
dependencies = [
  "PyMuPDF",
]

[tool.setuptools.packages.find]
where = ["src"]
